# mlops-customer-churn

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LOCAL_TESTING.md  Makefile  PROJECT_PROGRESS.md  README.md  README_DVC.md  README_M4_DOCKER.md  REPO_PROMPT_CONTEXT.md  create_dummy_artifacts.py  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup_all.ps1  setup_all.sh  setup_cluster.ps1  setup_cluster.sh
.dvc/: config
.github/workflows/: README.md  cd.yml  ci.yml  ct.yml  scheduled-monitoring.yml  tests.yml
MLOpsProject/: .gitignore
artifacts/metrics/: metrics.json
artifacts/models/: .dummy  baseline_model_config.yaml  best_model_config.yaml
configs/: best_model.yaml
data/: preprocess.py
data/processed/: drift_reference_clean.csv.dvc  inference_log.csv.dvc  inference_log_clean.csv.dvc
data/raw/: inference_log_raw.csv.dvc  mock_data.csv  telcom_churn.csv.dvc
deployment/: kind-config.yaml  monitoring-values.yaml
k8s/: README_M4.md  api-deployment.yaml  api-service.yaml  api.yaml  dashboard.json  grafana-dashboard-configmap.yaml  kind-config.yaml  mlflow.yaml  monitoring-values.yaml  servicemonitor.yaml  ui-deployment.yaml  ui-service.yaml
notebooks/: 01_eda.ipynb  01_exploratory_data_analysis.ipynb  02_experiment.ipynb  eda.ipynb
reports/: data_drift_report.html  final_metrics.json  model_comparison.csv
scripts/: README.md  TESTING_GUIDE.md  __init__.py  ci_steps.ps1  entrypoint.sh
src/: serve.py
streamlit_app/: app.py
tests/: test_api.py  test_data.py  test_model.py  test_model_quality.py  test_monitoring.py
(+65 files in other folders)
