[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-project"
version = "0.1.0"
description = "MLOps pipeline for churn prediction"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.26",
    "pydantic>=2.0,<3.0",
    "mlflow",
    "optuna",
    "xgboost",
    "lightgbm",
    "dvc",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "nbstripout",
]

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]
exclude = [".git", "__pycache__", ".venv", ".pytest_cache", "mlruns", "artifacts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"